--- a/csr/app/views/home/index.html.erb
+++ b/csr/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Home') %>
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-<p><%= link_to 'Register', users %></p>
+<p><%= link_to 'Register', users_path %></p>
