--- a/csr/app/views/home/index.html.erb
+++ b/csr/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
 <% provide(:title, 'Home') %>
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<p><%= link_to 'Register', users_path %></p>
+<div class="center hero-unit">
+  <h1>Welcome to the College Soccer Recruits</h1>
+
+  <h2>
+    This is the home page for the CSR sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
